--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My Third Github Repo</title>
 </head>
 <body>
-    
+    <h1>"Welcome to my first website"</h1>
+    <h2>This is my first website</h2>
+
 </body>
 </html>
