addea photo and changed in  h1 h2 h3 designed

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Third Github Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>"Welcome to my first website"</h1>
     <h2>This is my first website</h2>
+    <img src="myphoto.jpg" alt="Photo of Robeul">
+    <h3>I'm Mohammad Robeul Islam from Sunamganj</h3>
+    
 
 </body>
 </html>
